--- a/package.json
+++ b/package.json
@@ -17,12 +17,15 @@
     "material": "^0.9.21",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.5.1",
+    "react-loader-spinner": "^6.1.6",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.3",
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
     "toast": "^0.5.4",
-    "ui": "^0.2.4"
+    "ui": "^0.2.4",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
